--- a/assets/style.css
+++ b/assets/style.css
@@ -135,10 +135,23 @@ nav a {
 /* image formatting */
 .first-homework {
     position: relative;
+    margin-left: 150px;
     width: 100%;
     border: 5px solid skyblue;
     opacity: .5;
     min-width: 250px;
+}
+
+.movie-project {
+    position: relative;
+    width: 130%;
+    border: 5px solid skyblue;
+    opacity: .5;
+    min-width: 250px;
+}
+
+.movie-project:hover {
+    opacity: 1;
 }
 
 /* image opacity changes on hover */
@@ -150,6 +163,18 @@ nav a {
 figcaption {
     position: relative;
     margin: -63px 5px 0px 5px;
+    width: 128%;
+    font-size: 15px;
+    font-weight: bold;
+    color: black;
+    background-color: skyblue;
+    text-decoration: underline;
+}
+
+.seo {
+    position: relative;
+    margin: -63px 0px 0px 153px;
+    width: 99%;
     font-size: 15px;
     font-weight: bold;
     color: black;
