--- a/assets/style.css
+++ b/assets/style.css
@@ -142,12 +142,27 @@ nav a {
     min-width: 250px;
 }
 
-.movie-project {
+.dnd-project {
     position: relative;
     width: 130%;
+    height: 250px;
     border: 5px solid skyblue;
     opacity: .5;
     min-width: 250px;
+}
+
+.dnd-project:hover {
+    opacity: 1;
+}
+
+.movie-project {
+    position: relative;
+    width: 85%;
+    height: 80%;
+    margin-left: 120px;
+    border: 5px solid skyblue;
+    opacity: .5;
+    min-width: 200px;
 }
 
 .movie-project:hover {
@@ -164,6 +179,17 @@ figcaption {
     position: relative;
     margin: -63px 5px 0px 5px;
     width: 128%;
+    font-size: 15px;
+    font-weight: bold;
+    color: black;
+    background-color: skyblue;
+    text-decoration: underline;
+}
+
+.movie {
+    position: relative;
+    margin: -63px 0px 0px 120px;
+    width: 85%;
     font-size: 15px;
     font-weight: bold;
     color: black;
