--- a/assets/style.css
+++ b/assets/style.css
@@ -143,7 +143,7 @@ nav a {
 }
 
 .dnd-project {
-    position: fixed;
+    position: relative;
     width: 130%;
     height: 250px;
     border: 5px solid skyblue;
